--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "project-management",
   "version": "1.0.0",
   "description": "a project management application for beginners",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon index.js"
+    "devStart": "nodemon src/index.js"
   },
   "keywords": [
     "udemy",
@@ -18,5 +18,17 @@
   "license": "ISC",
   "devDependencies": {
     "prettier": "3.7.4"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
+    "mailgen": "^2.0.32",
+    "mongoose": "^9.0.2",
+    "nodemailer": "^7.0.12"
   }
 }
